--- a/BusyBus.html
+++ b/BusyBus.html
@@ -10,39 +10,84 @@
     <section>
       <div class="element">
         <h3>Eastbound</h3>
-        <h1>124 Navy Pier</h1>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">124 Navy Pier</li>
+            <li>1 min</li>
+          </ul>
+        </div>
       </div>
       <div class="element">
         <h3>Southbound</h3>
-        <h1>124 Navy Pier</h1>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">124 Navy Pier</li>
+            <li>1 min</li>
+          </ul>
+        </div>
       </div>
       <div class="element">
         <h3>Southbound</h3>
-        <h1>J14 103rd/Stony Island</h1>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">J14 103rd/Stony Island</li>
+            <li>6 min</li>
+          </ul>
+        </div>
       </div>
       <div class="element">
         <h3>Northbound</h3>
-        <h1>151 Devon Clark</h1>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">151 Devon Clark</li>
+            <li>7 min</li>
+          </ul>
+        </div>
       </div>
       <div class="element">
         <h3>Eastbound</h3>
-        <h1>60 Randolph/Harbor Drive</h1>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">60 Randolph/Harbor Drive</li>
+            <li>11 min</li>
+          </ul>
+        </div>
       </div>
       <div class="element">
         <h3>Reroute</h3>
-        <h1>6x Jackson Park Express</h1>
-      </div>
-      <div class="element outofservice">
-        <h3>Out Of Service</h3>
-        <h1>4 Cottage Grove</h1>
-      </div>
-      <div class="element outofservice">
-        <h3>Out Of Service</h3>
-        <h1>20 Madison</h1>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">6x Jackson Park Express</li>
+            <li>N/A</li>
+          </ul>
+        </div>
       </div>
       <div class="element outofservice">
         <h3>Out of Service</h3>
-        <h1>157 Streetervile/Taylor</h1>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">4 Cottage Grove</li>
+            <li>12:10 am</li>
+          </ul>
+        </div>
+      </div>
+      <div class="element outofservice">
+        <h3>Out of Service</h3>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">20 Madison</li>
+            <li>12:10 am</li>
+          </ul>
+        </div>
+      </div>
+      <div class="element outofservice">
+        <h3>Out of Service</h3>
+        <div id="navcontainer">
+          <ul id="navlist">
+            <li class="busroute">157 Streeterville/Taylor</li>
+            <li>6:00 am</li>
+          </ul>
+        </div>
       </div>
     </section>
   </body>
