--- a/BusyBus.html
+++ b/BusyBus.html
@@ -12,7 +12,7 @@
         <h3>Eastbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">124 Navy Pier</li>
+            <li>124 Navy Pier</li>
             <li>1 min</li>
           </ul>
         </div>
@@ -21,7 +21,7 @@
         <h3>Southbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">124 Navy Pier</li>
+            <li>124 Navy Pier</li>
             <li>1 min</li>
           </ul>
         </div>
@@ -30,7 +30,7 @@
         <h3>Southbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">J14 103rd/Stony Island</li>
+            <li>J14 103rd/Stony Island</li>
             <li>6 min</li>
           </ul>
         </div>
@@ -39,7 +39,7 @@
         <h3>Northbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">151 Devon Clark</li>
+            <li>151 Devon Clark</li>
             <li>7 min</li>
           </ul>
         </div>
@@ -48,7 +48,7 @@
         <h3>Eastbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">60 Randolph/Harbor Drive</li>
+            <li>60 Randolph/Harbor Drive</li>
             <li>11 min</li>
           </ul>
         </div>
@@ -57,7 +57,7 @@
         <h3>Reroute</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">6x Jackson Park Express</li>
+            <li>6x Jackson Park Express</li>
             <li>N/A</li>
           </ul>
         </div>
@@ -66,7 +66,7 @@
         <h3>Out of Service</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">4 Cottage Grove</li>
+            <li>4 Cottage Grove</li>
             <li>12:10 am</li>
           </ul>
         </div>
@@ -75,7 +75,7 @@
         <h3>Out of Service</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">20 Madison</li>
+            <li>20 Madison</li>
             <li>12:10 am</li>
           </ul>
         </div>
@@ -84,7 +84,7 @@
         <h3>Out of Service</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li class="busroute">157 Streeterville/Taylor</li>
+            <li>157 Streeterville/Taylor</li>
             <li>6:00 am</li>
           </ul>
         </div>
