--- a/BusyBus.html
+++ b/BusyBus.html
@@ -12,8 +12,8 @@
         <h3>Eastbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>124 Navy Pier</li>
-            <li>1 min</li>
+            <li class="style1">124 Navy Pier</li>
+            <li class="style2">1 min</li>
           </ul>
         </div>
       </div>
@@ -21,8 +21,8 @@
         <h3>Southbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>124 Navy Pier</li>
-            <li>1 min</li>
+            <li class="style1">124 Navy Pier</li>
+            <li class="style3">1 min</li>
           </ul>
         </div>
       </div>
@@ -30,8 +30,8 @@
         <h3>Southbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>J14 103rd/Stony Island</li>
-            <li>6 min</li>
+            <li class="style1">J14 103rd/Stony Island</li>
+            <li class="style4">6 min</li>
           </ul>
         </div>
       </div>
@@ -39,8 +39,8 @@
         <h3>Northbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>151 Devon Clark</li>
-            <li>7 min</li>
+            <li class="style1">151 Devon Clark</li>
+            <li class="style5">7 min</li>
           </ul>
         </div>
       </div>
@@ -48,8 +48,8 @@
         <h3>Eastbound</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>60 Randolph/Harbor Drive</li>
-            <li>11 min</li>
+            <li class="style1">60 Randolph/Harbor Drive</li>
+            <li class="style6">11 min</li>
           </ul>
         </div>
       </div>
@@ -57,8 +57,8 @@
         <h3>Reroute</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>6x Jackson Park Express</li>
-            <li>N/A</li>
+            <li class="style1">6x Jackson Park Express</li>
+            <li class="style7">N/A</li>
           </ul>
         </div>
       </div>
@@ -66,8 +66,8 @@
         <h3>Out of Service</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>4 Cottage Grove</li>
-            <li>12:10 am</li>
+            <li class="style1">4 Cottage Grove</li>
+            <li class="style8">12:10 am</li>
           </ul>
         </div>
       </div>
@@ -75,8 +75,8 @@
         <h3>Out of Service</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>20 Madison</li>
-            <li>12:10 am</li>
+            <li class="style1">20 Madison</li>
+            <li class="style9">12:10 am</li>
           </ul>
         </div>
       </div>
@@ -84,8 +84,8 @@
         <h3>Out of Service</h3>
         <div id="navcontainer">
           <ul id="navlist">
-            <li>157 Streeterville/Taylor</li>
-            <li>6:00 am</li>
+            <li class="style1">157 Streeterville/Taylor</li>
+            <li class="style10">6:00 am</li>
           </ul>
         </div>
       </div>
