--- a/BusyBus.html
+++ b/BusyBus.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html>
+
+<div class="bar">
+  <div class="text">
+    <p>8:30</p>
+
+    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+  width="50" height="50"
+  viewBox="0 0 172 172"
+  style=" fill:#000000;"><g stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M130.72,6.88v158.24h34.4v-158.24zM137.6,13.76h20.64v144.48h-20.64zM89.44,44.72v120.4h34.4v-120.4zM48.16,82.56v82.56h34.4v-82.56zM6.88,120.4v44.72h34.4v-44.72z"></path></g></g></svg>
+  </div>
+
+  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+width="50" height="50"
+viewBox="0 0 172 172"
+style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M86,24.08c-31.16156,0 -60.75094,11.94594 -83.3125,33.62063l-2.4725,2.37844l19.0275,19.83375l2.49938,-2.37844c17.40156,-16.71625 40.23187,-25.93438 64.25812,-25.93438c24.02625,0 46.85656,9.21813 64.27156,25.93438l2.48594,2.37844l19.04094,-19.83375l-2.48594,-2.39188c-22.56156,-21.67469 -52.15094,-33.60719 -83.3125,-33.60719zM86,65.36c-20.47875,0 -39.92281,7.8475 -54.74437,22.09125l-2.48594,2.37844l19.12156,19.92781l2.48594,-2.39187c9.70188,-9.33906 22.36,-14.48563 35.62281,-14.48563c13.26281,0 25.92094,5.14656 35.62281,14.48563l2.48594,2.39187l19.12156,-19.92781l-2.4725,-2.37844c-14.835,-14.24375 -34.27906,-22.09125 -54.75781,-22.09125zM86,106.64c-9.7825,0 -19.08125,3.74906 -26.17625,10.57531l-2.4725,2.37844l28.64875,29.84469l28.64875,-29.84469l-2.4725,-2.37844c-7.095,-6.82625 -16.39375,-10.57531 -26.17625,-10.57531z"></path></g></g></svg>
+</div>
+
+  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+width="50" height="50"
+viewBox="0 0 172 172"
+style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M22.93333,40.13333c-9.43116,0 -17.2,7.76884 -17.2,17.2v51.6c0,9.43116 7.76884,17.2 17.2,17.2h114.66667c9.43116,0 17.2,-7.76884 17.2,-17.2v-51.6c0,-9.43116 -7.76884,-17.2 -17.2,-17.2zM22.93333,51.6h114.66667c3.23951,0 5.73333,2.49383 5.73333,5.73333v51.6c0,3.23951 -2.49383,5.73333 -5.73333,5.73333h-114.66667c-3.23951,0 -5.73333,-2.49383 -5.73333,-5.73333v-51.6c0,-3.23951 2.49383,-5.73333 5.73333,-5.73333zM28.66667,63.06667v40.13333h51.6v-40.13333zM160.53333,68.8v28.66667h5.73333c3.1648,0 5.73333,-2.56853 5.73333,-5.73333v-17.2c0,-3.1648 -2.56853,-5.73333 -5.73333,-5.73333z"></path></g></g></svg>
+  </div>
+
+</div>
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -8,87 +32,79 @@
   </head>
   <body>
     <section>
-      <div class="element">
-        <h3>Eastbound</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style2">124 Navy Pier</li>
-            <li class="style1">1 min</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element">
-        <h3>Southbound</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style3">124 Navy Pier</li>
-            <li class="style1">1 min</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element">
-        <h3>Southbound</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style4">J14 103rd/Stony Island</li>
-            <li class="style1">6 min</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element">
-        <h3>Northbound</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style5">151 Devon Clark</li>
-            <li class="style1">7 min</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element">
-        <h3>Eastbound</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style6">60 Randolph/Harbor Drive</li>
-            <li class="style1">11 min</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element">
-        <h3>Reroute</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style7">6x Jackson Park Express</li>
-            <li class="style1">N/A</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element outofservice">
-        <h3>Out of Service</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style8">4 Cottage Grove</li>
-            <li class="style1">12:10 am</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element outofservice">
-        <h3>Out of Service</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style9">20 Madison</li>
-            <li class="style1">12:10 am</li>
-          </ul>
-        </div>
-      </div>
-      <div class="element outofservice">
-        <h3>Out of Service</h3>
-        <div id="navcontainer">
-          <ul id="navlist">
-            <li class="style10">157 Streeterville/Taylor</li>
-            <li class="style1">6:00 am</li>
-          </ul>
-        </div>
-      </div>
+
+<div class="element">
+  <h3>Eastbound</h3>
+    <ul id="navlist">
+      <li class="style2">124 Navy Pier</li>
+      <li class="style1">1 min</li>
+    </ul>
+</div>
+
+<div class="element">
+  <h3>Southbound</h3>
+    <ul id="navlist">
+      <li class="style2">124 Navy Pier</li>
+      <li class="style1">1 min</li>
+    </ul>
+</div>
+
+<div class="element">
+  <h3>Southbound</h3>
+    <ul id="navlist">
+      <li class="style2">J14 103rd/Stony Island</li>
+      <li class="style1">6 min</li>
+    </ul>
+  </div>
+
+<div class="element">
+  <h3>Northbound</h3>
+    <ul id="navlist">
+      <li class="style2">151 Devon Clark</li>
+      <li class="style1">7 min</li>
+    </ul>
+</div>
+
+<div class="element">
+  <h3>Eastbound</h3>
+    <ul id="navlist">
+      <li class="style2">60 Randolph/Harbor Drive</li>
+      <li class="style1">11 min</li>
+    </ul>
+</div>
+
+<div class="element">
+  <h3>Reroute</h3>
+    <ul id="navlist">
+      <li class="style2">6x Jackson Park Express</li>
+      <li class="style1">N/A</li>
+    </ul>
+</div>
+
+<div class="element outofservice">
+  <h3>Out of Service</h3>
+    <ul id="navlist">
+      <li class="style2">4 Cottage Grove</li>
+      <li class="style1">12:10 am</li>
+    </ul>
+</div>
+
+<div class="element outofservice">
+  <h3>Out of Service</h3>
+    <ul id="navlist">
+      <li class="style2">20 Madison</li>
+      <li class="style1">12:10 am</li>
+    </ul>
+</div>
+
+<div class="element outofservice">
+  <h3>Out of Service</h3>
+    <ul id="navlist">
+      <li class="style2">157 Streeterville/Taylor</li>
+      <li class="style1">6:00 am</li>
+    </ul>
+  </div>
+
     </section>
   </body>
 </html>
