--- a/BusyBus.html
+++ b/BusyBus.html
@@ -23,6 +23,7 @@
       <li class="style2">124 Navy Pier</li>
       <li class="style1">1 min</li>
     </ul>
+  <h3>Every 20 minutes (expect delays)</h3>
 </div>
 
 <div class="element">
@@ -31,6 +32,7 @@
       <li class="style2">124 Navy Pier</li>
       <li class="style1">1 min</li>
     </ul>
+  <h3>Every 10 minutes (expect delays)</h3>
 </div>
 
 <div class="element">
@@ -39,6 +41,7 @@
       <li class="style2">J14 103rd/Stony Island</li>
       <li class="style1">6 min</li>
     </ul>
+  <h3>Every 16 minutes (expect delays)</h3>
   </div>
 
 <div class="element">
@@ -47,6 +50,7 @@
       <li class="style2">151 Devon Clark</li>
       <li class="style1">7 min</li>
     </ul>
+  <h3>Every 15 minutes (expect delays)</h3>
 </div>
 
 <div class="element">
@@ -55,6 +59,7 @@
       <li class="style2">60 Randolph/Harbor Drive</li>
       <li class="style1">11 min</li>
     </ul>
+  <h3>Every 10 minutes (expect delays)</h3>
 </div>
 
 <div class="element">
